--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ coverage
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-
+public
 # Dependency directories
 node_modules/
 jspm_packages/
