--- a/package.json
+++ b/package.json
@@ -73,7 +73,9 @@
     "css-loader": "^3.0.0",
     "electron": "8.2.1",
     "node-loader": "^0.6.0",
-    "style-loader": "^0.23.1"
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.3",
+    "tailwindcss": "^1.2.0"
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0"
