lets get orgnaised

--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
         [
           "@electron-forge/plugin-webpack",
           {
-            "mainConfig": "./webpack.main.config.js",
+            "mainConfig": "./config/webpack.main.config.js",
             "renderer": {
-              "config": "./webpack.renderer.config.js",
+              "config": "./config/webpack.renderer.config.js",
               "entryPoints": [
                 {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.js",
+                  "html": "./src/app/index.html",
+                  "js": "./src/app/renderer.js",
                   "name": "main_window"
                 }
               ]
