--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^5.1.1",
     "lit-html": "^1.2.1",
-    "menubar": "^8.0.1",
-    "node-notifier": "^7.0.0"
+    "menubar": "^8.0.1"
   }
 }
