--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "app",
-  "productName": "app",
-  "version": "1.0.0",
-  "description": "My Electron application description",
+  "name": "unlock",
+  "productName": "unlock",
+  "version": "0.0.1",
+  "description": "Unlock the token",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
@@ -23,7 +23,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "app"
+            "name": "Unlock"
           }
         },
         {
